--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -6,6 +6,7 @@ allow 103.126.161.54;
 allow 103.129.222.46;
 allow 103.163.218.11;
 allow 103.172.134.26;
+allow 103.174.253.222;
 allow 103.193.179.233;
 allow 103.196.37.111;
 allow 103.208.86.5;
@@ -28,7 +29,6 @@ allow 104.244.72.132;
 allow 104.244.73.136;
 allow 104.244.73.190;
 allow 104.244.73.193;
-allow 104.244.73.43;
 allow 104.244.74.23;
 allow 104.244.74.97;
 allow 104.244.75.74;
@@ -36,7 +36,6 @@ allow 104.244.77.192;
 allow 104.244.77.208;
 allow 104.244.77.79;
 allow 104.244.77.80;
-allow 104.244.78.162;
 allow 104.244.78.233;
 allow 104.244.79.44;
 allow 104.244.79.50;
@@ -54,7 +53,6 @@ allow 107.189.1.160;
 allow 107.189.1.175;
 allow 107.189.11.80;
 allow 107.189.12.3;
-allow 107.189.13.180;
 allow 107.189.13.251;
 allow 107.189.13.253;
 allow 107.189.13.254;
@@ -95,6 +93,7 @@ allow 108.181.27.205;
 allow 108.181.69.243;
 allow 108.61.189.136;
 allow 109.169.33.163;
+allow 109.201.133.100;
 allow 109.69.67.17;
 allow 109.70.100.1;
 allow 109.70.100.2;
@@ -163,6 +162,7 @@ allow 163.5.143.76;
 allow 165.73.242.163;
 allow 166.70.207.2;
 allow 167.71.6.109;
+allow 167.99.208.41;
 allow 168.100.9.100;
 allow 168.100.9.97;
 allow 171.25.193.20;
@@ -891,6 +891,7 @@ allow 23.129.64.220;
 allow 23.129.64.221;
 allow 23.129.64.222;
 allow 23.129.64.223;
+allow 23.129.64.224;
 allow 23.129.64.225;
 allow 23.129.64.226;
 allow 23.129.64.227;
@@ -1050,7 +1051,6 @@ allow 2605:6400:30:f5db:25a1:b884:ef2d:8818;
 allow 2605:6400:30:f623:5a78:29a6:8492:27b0;
 allow 2605:6400:30:f6b7::1337;
 allow 2605:6400:30:f753:891d:ee77:e97c:741a;
-allow 2605:6400:30:f78b::2;
 allow 2605:6400:30:f7c0:8511:b113:ca11:9baa;
 allow 2605:6400:30:f7ca::2;
 allow 2605:6400:30:f7fa:c230:6fe8:a09a:5836;
@@ -1108,6 +1108,7 @@ allow 2620:18c:0:192::220;
 allow 2620:18c:0:192::221;
 allow 2620:18c:0:192::222;
 allow 2620:18c:0:192::223;
+allow 2620:18c:0:192::224;
 allow 2620:18c:0:192::225;
 allow 2620:18c:0:192::226;
 allow 2620:18c:0:192::227;
@@ -1467,7 +1468,6 @@ allow 2a0b:f4c2::9;
 allow 2a0c:e300::23;
 allow 2a0d:3e83:1:b284::1;
 allow 2a0d:c2c0:1:4::2;
-allow 2a0e:97c0:470::30;
 allow 2a0e:d602:1:14bc::2;
 allow 2a0e:d602:2:2a2::2;
 allow 2a0e:d602:2:55f::2;
@@ -1523,7 +1523,7 @@ allow 37.252.255.135;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.97.116.244;
-allow 44.210.157.88;
+allow 44.221.36.130;
 allow 45.132.246.245;
 allow 45.134.225.36;
 allow 45.135.132.20;
@@ -1579,7 +1579,7 @@ allow 45.95.169.184;
 allow 45.95.169.255;
 allow 46.166.139.111;
 allow 46.182.21.248;
-allow 46.195.221.9;
+allow 46.195.241.190;
 allow 46.226.164.14;
 allow 46.232.251.191;
 allow 46.234.47.105;
@@ -1608,7 +1608,6 @@ allow 51.91.18.151;
 allow 5.196.8.113;
 allow 5.196.95.34;
 allow 5.252.224.53;
-allow 5.255.100.126;
 allow 5.255.100.219;
 allow 5.255.101.10;
 allow 5.255.101.131;
@@ -1676,7 +1675,6 @@ allow 77.91.85.147;
 allow 77.91.86.95;
 allow 77.91.87.79;
 allow 78.142.18.219;
-allow 79.124.8.241;
 allow 79.137.198.213;
 allow 80.210.78.252;
 allow 80.241.60.207;
@@ -1774,7 +1772,6 @@ allow 92.243.24.163;
 allow 92.246.84.133;
 allow 93.123.12.112;
 allow 93.243.56.177;
-allow 93.90.74.31;
 allow 93.95.225.141;
 allow 93.95.228.125;
 allow 93.95.228.205;
@@ -1812,5 +1809,4 @@ allow 95.168.173.143;
 allow 95.211.210.103;
 allow 95.211.244.28;
 allow 96.27.198.133;
-allow 96.42.26.63;
 allow 96.66.15.152;
