--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -6,6 +6,7 @@ deny 103.126.161.54;
 deny 103.129.222.46;
 deny 103.163.218.11;
 deny 103.172.134.26;
+deny 103.174.253.222;
 deny 103.193.179.233;
 deny 103.196.37.111;
 deny 103.208.86.5;
@@ -111,6 +112,7 @@ deny 109.70.100.69;
 deny 109.70.100.70;
 deny 109.70.100.71;
 deny 114.199.75.111;
+deny 118.163.74.160;
 deny 125.212.241.131;
 deny 128.127.180.156;
 deny 128.31.0.13;
@@ -252,6 +254,7 @@ deny 185.129.61.8;
 deny 185.129.61.9;
 deny 185.129.62.62;
 deny 185.129.62.63;
+deny 185.130.44.108;
 deny 185.130.44.43;
 deny 185.130.47.58;
 deny 185.141.147.128;
@@ -798,6 +801,7 @@ deny 2001:67c:89c:702:1ce:1ce:babe:7;
 deny 2001:67c:89c:702:1ce:1ce:babe:8;
 deny 2001:67c:89c:702:1ce:1ce:babe:9;
 deny 2001:910:1400:107::2;
+deny 2001:b030:2422::7234;
 deny 2001:bc8:1201:608:46a8:42ff:fe3d:2743;
 deny 2001:bc8:1600:472a::1;
 deny 2001:bc8:700:9212::1;
@@ -947,6 +951,7 @@ deny 2.58.56.248;
 deny 2.58.56.43;
 deny 2.58.56.90;
 deny 2600:3c00:e000:4ee::1;
+deny 2600:3c00::f03c:91ff:fe96:1cd9;
 deny 2600:3c03:e000:fa::2;
 deny 2600:3c03::f03c:91ff:fe24:47be;
 deny 2600:3c03::f03c:94ff:fed1:8c69;
@@ -1271,6 +1276,7 @@ deny 2a06:1700:4:14::1;
 deny 2a06:d380:0:103::62;
 deny 2a06:d380:0:103::63;
 deny 2a06:e80:3000:1:bad:babe:ca11:911;
+deny 2a07:e01:2:13::2;
 deny 2a07:e03:2a::bcde;
 deny 2a0a:4cc0:0:99:c44b:7eff:fe23:de3d;
 deny 2a0a:4cc0:1:101:a463:1eff:fee1:4874;
@@ -1520,6 +1526,7 @@ deny 37.252.255.135;
 deny 37.48.120.196;
 deny 37.48.70.156;
 deny 38.97.116.244;
+deny 3.92.153.20;
 deny 45.132.246.245;
 deny 45.134.225.36;
 deny 45.135.132.20;
@@ -1575,7 +1582,7 @@ deny 45.95.169.184;
 deny 45.95.169.255;
 deny 46.166.139.111;
 deny 46.182.21.248;
-deny 46.195.241.190;
+deny 46.195.252.134;
 deny 46.226.164.14;
 deny 46.232.251.191;
 deny 46.234.47.105;
@@ -1613,7 +1620,6 @@ deny 5.255.103.235;
 deny 5.255.111.64;
 deny 5.255.115.42;
 deny 5.255.115.58;
-deny 5.255.117.56;
 deny 5.255.118.244;
 deny 5.255.124.150;
 deny 5.255.125.196;
@@ -1641,7 +1647,6 @@ deny 54.36.101.21;
 deny 5.45.102.93;
 deny 5.45.104.176;
 deny 5.45.98.162;
-deny 54.88.228.136;
 deny 5.61.51.143;
 deny 5.79.66.19;
 deny 62.133.45.2;
@@ -1656,6 +1661,7 @@ deny 66.220.242.222;
 deny 67.219.109.141;
 deny 70.53.133.193;
 deny 71.19.144.106;
+deny 72.14.179.10;
 deny 72.167.47.69;
 deny 74.207.248.172;
 deny 74.208.106.128;
