--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -5,7 +5,6 @@ allow 103.109.101.105;
 allow 103.126.161.54;
 allow 103.129.222.46;
 allow 103.163.218.11;
-allow 103.174.253.222;
 allow 103.193.179.233;
 allow 103.196.37.111;
 allow 103.208.86.5;
@@ -110,6 +109,7 @@ allow 109.70.100.69;
 allow 109.70.100.70;
 allow 109.70.100.71;
 allow 114.199.75.111;
+allow 118.163.74.160;
 allow 125.212.241.131;
 allow 128.127.180.156;
 allow 128.31.0.13;
@@ -160,6 +160,7 @@ allow 163.172.45.102;
 allow 163.5.143.76;
 allow 165.73.242.163;
 allow 166.70.207.2;
+allow 167.71.6.109;
 allow 167.99.208.41;
 allow 171.25.193.20;
 allow 171.25.193.234;
@@ -200,6 +201,7 @@ allow 178.20.55.16;
 allow 178.20.55.182;
 allow 178.218.144.18;
 allow 178.218.144.51;
+allow 178.218.144.64;
 allow 178.218.144.99;
 allow 178.236.247.122;
 allow 179.43.128.16;
@@ -538,7 +540,6 @@ allow 188.214.104.21;
 allow 188.68.41.191;
 allow 188.68.49.235;
 allow 188.68.52.231;
-allow 189.147.193.202;
 allow 190.103.179.98;
 allow 190.120.229.98;
 allow 190.211.254.97;
@@ -791,12 +792,14 @@ allow 2001:67c:89c:702:1ce:1ce:babe:7;
 allow 2001:67c:89c:702:1ce:1ce:babe:8;
 allow 2001:67c:89c:702:1ce:1ce:babe:9;
 allow 2001:910:1400:107::2;
+allow 2001:b030:2422::7234;
 allow 2001:bc8:1201:608:46a8:42ff:fe3d:2743;
 allow 2001:bc8:1600:472a::1;
 allow 2001:bc8:700:9212::1;
 allow 2001:bc8:710:3672:dc00:ff:fe42:19db;
 allow 2001:bf0:666::666;
 allow 2001:df7:7e80:100:9f2b:1d15:c713:52ad;
+allow 201.137.252.163;
 allow 202.61.226.98;
 allow 202.69.76.36;
 allow 204.137.14.104;
@@ -1200,6 +1203,7 @@ allow 2a03:94e0:ffff:185:243:218:0:35;
 allow 2a03:94e0:ffff:185:243:218:0:41;
 allow 2a03:94e0:ffff:185:243:218:0:46;
 allow 2a03:94e0:ffff:185:243:218:0:89;
+allow 2a03:b0c0:2:d0::1768:8001;
 allow 2a03:b0c0:2:d0::f1b:2001;
 allow 2a03:e600:100::1;
 allow 2a03:e600:100::2;
@@ -1509,11 +1513,10 @@ allow 37.228.129.63;
 allow 37.252.255.135;
 allow 37.48.120.196;
 allow 37.48.70.156;
+allow 3.82.80.137;
 allow 38.97.116.244;
-allow 44.206.219.240;
 allow 45.132.246.245;
 allow 45.134.225.36;
-allow 45.135.132.20;
 allow 45.138.16.107;
 allow 45.138.16.113;
 allow 45.138.16.203;
@@ -1671,6 +1674,7 @@ allow 77.91.87.79;
 allow 78.142.18.219;
 allow 79.102.242.202;
 allow 79.124.8.241;
+allow 79.137.198.213;
 allow 80.210.78.252;
 allow 80.241.60.207;
 allow 80.67.167.81;
@@ -1692,7 +1696,6 @@ allow 82.68.49.227;
 allow 83.217.9.73;
 allow 83.96.213.63;
 allow 83.97.20.77;
-allow 84.131.58.211;
 allow 84.16.224.227;
 allow 84.19.182.20;
 allow 84.211.225.54;
