--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -108,6 +108,7 @@ deny 2001:67c:89c:702:1ce:1ce:babe:7;
 deny 2001:67c:89c:702:1ce:1ce:babe:8;
 deny 2001:67c:89c:702:1ce:1ce:babe:9;
 deny 2001:910:1400:107::2;
+deny 2001:b030:2422::7234;
 deny 2001:bc8:1201:608:46a8:42ff:fe3d:2743;
 deny 2001:bc8:1600:472a::1;
 deny 2001:bc8:700:9212::1;
@@ -379,6 +380,7 @@ deny 2a03:94e0:ffff:185:243:218:0:35;
 deny 2a03:94e0:ffff:185:243:218:0:41;
 deny 2a03:94e0:ffff:185:243:218:0:46;
 deny 2a03:94e0:ffff:185:243:218:0:89;
+deny 2a03:b0c0:2:d0::1768:8001;
 deny 2a03:b0c0:2:d0::f1b:2001;
 deny 2a03:e600:100::1;
 deny 2a03:e600:100::2;
