--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -113,7 +113,6 @@ allow 114.199.75.111;
 allow 118.163.74.160;
 allow 125.212.241.131;
 allow 128.127.180.156;
-allow 128.31.0.13;
 allow 135.125.205.25;
 allow 136.244.111.163;
 allow 138.128.222.68;
@@ -542,6 +541,7 @@ allow 188.214.104.21;
 allow 188.68.41.191;
 allow 188.68.49.235;
 allow 188.68.52.231;
+allow 190.103.179.98;
 allow 190.120.229.98;
 allow 190.211.254.97;
 allow 191.101.31.46;
@@ -824,6 +824,7 @@ allow 207.154.193.51;
 allow 207.154.234.107;
 allow 208.109.215.188;
 allow 208.109.36.224;
+allow 209.141.38.84;
 allow 209.141.40.44;
 allow 209.141.46.203;
 allow 209.141.50.178;
@@ -1109,6 +1110,7 @@ allow 2620:59:a000:9666:216:3eff:fe7d:dae8;
 allow 2620:7:6001::120;
 allow 2620:95:4007::111;
 allow 27.255.75.198;
+allow 2800:ba0:6:c1::4858;
 allow 2a00:1169:110:2990::;
 allow 2a00:1169:112:de0::;
 allow 2a00:1169:117:5510::;
@@ -1456,6 +1458,7 @@ allow 2a0b:f4c2::8;
 allow 2a0b:f4c2::9;
 allow 2a0c:e300::23;
 allow 2a0d:3e83:1:b284::1;
+allow 2a0d:c2c0:1:4::2;
 allow 2a0e:97c0:470::30;
 allow 2a0e:d602:1:14bc::2;
 allow 2a0e:d602:2:2a2::2;
@@ -1501,7 +1504,6 @@ allow 2a12:a800:2:1:45:138:16:203;
 allow 31.129.22.65;
 allow 31.220.87.46;
 allow 31.220.98.139;
-allow 34.233.2.162;
 allow 35.0.127.52;
 allow 37.1.201.144;
 allow 37.120.166.23;
@@ -1513,8 +1515,10 @@ allow 37.252.255.135;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.97.116.244;
+allow 44.194.162.30;
 allow 45.132.246.245;
 allow 45.134.225.36;
+allow 45.135.132.20;
 allow 45.138.16.107;
 allow 45.138.16.113;
 allow 45.138.16.203;
@@ -1540,6 +1544,7 @@ allow 45.141.215.88;
 allow 45.141.215.90;
 allow 45.141.215.95;
 allow 45.141.215.97;
+allow 45.14.247.170;
 allow 45.15.157.177;
 allow 45.15.158.165;
 allow 45.15.158.39;
@@ -1575,6 +1580,7 @@ allow 45.95.169.230;
 allow 45.95.169.255;
 allow 46.166.139.111;
 allow 46.182.21.248;
+allow 46.195.78.212;
 allow 46.226.164.14;
 allow 46.232.251.191;
 allow 46.234.47.105;
@@ -1671,7 +1677,6 @@ allow 77.91.85.147;
 allow 77.91.86.95;
 allow 77.91.87.79;
 allow 78.142.18.219;
-allow 79.102.242.202;
 allow 79.124.8.241;
 allow 79.137.198.213;
 allow 80.210.78.252;
@@ -1765,6 +1770,7 @@ allow 92.205.185.52;
 allow 92.205.237.227;
 allow 92.205.31.137;
 allow 92.243.24.163;
+allow 92.246.84.133;
 allow 93.123.12.112;
 allow 93.243.56.177;
 allow 93.90.74.31;
