--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -286,6 +286,7 @@ allow 2620:18c:0:192::229;
 allow 2620:59:a000:9666:216:3eff:fe7d:dae8;
 allow 2620:7:6001::120;
 allow 2620:95:4007::111;
+allow 2800:ba0:6:c1::4858;
 allow 2a00:1169:110:2990::;
 allow 2a00:1169:112:de0::;
 allow 2a00:1169:117:5510::;
@@ -633,6 +634,7 @@ allow 2a0b:f4c2::8;
 allow 2a0b:f4c2::9;
 allow 2a0c:e300::23;
 allow 2a0d:3e83:1:b284::1;
+allow 2a0d:c2c0:1:4::2;
 allow 2a0e:97c0:470::30;
 allow 2a0e:d602:1:14bc::2;
 allow 2a0e:d602:2:2a2::2;
