--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -113,7 +113,6 @@ set_real_ip_from 114.199.75.111;
 set_real_ip_from 118.163.74.160;
 set_real_ip_from 125.212.241.131;
 set_real_ip_from 128.127.180.156;
-set_real_ip_from 128.31.0.13;
 set_real_ip_from 135.125.205.25;
 set_real_ip_from 136.244.111.163;
 set_real_ip_from 138.128.222.68;
@@ -542,6 +541,7 @@ set_real_ip_from 188.214.104.21;
 set_real_ip_from 188.68.41.191;
 set_real_ip_from 188.68.49.235;
 set_real_ip_from 188.68.52.231;
+set_real_ip_from 190.103.179.98;
 set_real_ip_from 190.120.229.98;
 set_real_ip_from 190.211.254.97;
 set_real_ip_from 191.101.31.46;
@@ -824,6 +824,7 @@ set_real_ip_from 207.154.193.51;
 set_real_ip_from 207.154.234.107;
 set_real_ip_from 208.109.215.188;
 set_real_ip_from 208.109.36.224;
+set_real_ip_from 209.141.38.84;
 set_real_ip_from 209.141.40.44;
 set_real_ip_from 209.141.46.203;
 set_real_ip_from 209.141.50.178;
@@ -1109,6 +1110,7 @@ set_real_ip_from 2620:59:a000:9666:216:3eff:fe7d:dae8;
 set_real_ip_from 2620:7:6001::120;
 set_real_ip_from 2620:95:4007::111;
 set_real_ip_from 27.255.75.198;
+set_real_ip_from 2800:ba0:6:c1::4858;
 set_real_ip_from 2a00:1169:110:2990::;
 set_real_ip_from 2a00:1169:112:de0::;
 set_real_ip_from 2a00:1169:117:5510::;
@@ -1456,6 +1458,7 @@ set_real_ip_from 2a0b:f4c2::8;
 set_real_ip_from 2a0b:f4c2::9;
 set_real_ip_from 2a0c:e300::23;
 set_real_ip_from 2a0d:3e83:1:b284::1;
+set_real_ip_from 2a0d:c2c0:1:4::2;
 set_real_ip_from 2a0e:97c0:470::30;
 set_real_ip_from 2a0e:d602:1:14bc::2;
 set_real_ip_from 2a0e:d602:2:2a2::2;
@@ -1501,7 +1504,6 @@ set_real_ip_from 2a12:a800:2:1:45:138:16:203;
 set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.220.87.46;
 set_real_ip_from 31.220.98.139;
-set_real_ip_from 34.233.2.162;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 37.1.201.144;
 set_real_ip_from 37.120.166.23;
@@ -1513,8 +1515,10 @@ set_real_ip_from 37.252.255.135;
 set_real_ip_from 37.48.120.196;
 set_real_ip_from 37.48.70.156;
 set_real_ip_from 38.97.116.244;
+set_real_ip_from 44.194.162.30;
 set_real_ip_from 45.132.246.245;
 set_real_ip_from 45.134.225.36;
+set_real_ip_from 45.135.132.20;
 set_real_ip_from 45.138.16.107;
 set_real_ip_from 45.138.16.113;
 set_real_ip_from 45.138.16.203;
@@ -1540,6 +1544,7 @@ set_real_ip_from 45.141.215.88;
 set_real_ip_from 45.141.215.90;
 set_real_ip_from 45.141.215.95;
 set_real_ip_from 45.141.215.97;
+set_real_ip_from 45.14.247.170;
 set_real_ip_from 45.15.157.177;
 set_real_ip_from 45.15.158.165;
 set_real_ip_from 45.15.158.39;
@@ -1575,6 +1580,7 @@ set_real_ip_from 45.95.169.230;
 set_real_ip_from 45.95.169.255;
 set_real_ip_from 46.166.139.111;
 set_real_ip_from 46.182.21.248;
+set_real_ip_from 46.195.78.212;
 set_real_ip_from 46.226.164.14;
 set_real_ip_from 46.232.251.191;
 set_real_ip_from 46.234.47.105;
@@ -1671,7 +1677,6 @@ set_real_ip_from 77.91.85.147;
 set_real_ip_from 77.91.86.95;
 set_real_ip_from 77.91.87.79;
 set_real_ip_from 78.142.18.219;
-set_real_ip_from 79.102.242.202;
 set_real_ip_from 79.124.8.241;
 set_real_ip_from 79.137.198.213;
 set_real_ip_from 80.210.78.252;
@@ -1765,6 +1770,7 @@ set_real_ip_from 92.205.185.52;
 set_real_ip_from 92.205.237.227;
 set_real_ip_from 92.205.31.137;
 set_real_ip_from 92.243.24.163;
+set_real_ip_from 92.246.84.133;
 set_real_ip_from 93.123.12.112;
 set_real_ip_from 93.243.56.177;
 set_real_ip_from 93.90.74.31;
